@@ -1,3 +1,11 @@
+2000-11-02  Nick Clifton  <nickc@redhat.com>
+
+	* config/tc-mn10300.c (debug_line): Remove this static
+	varaible.
+	(md_assemble): Call dwarf2_generate_asm_lineno instead of
+	dwarf2_where and dwarf2_gen_line_info.
+
+
 2000-11-02  Theo Honohan  <th@futuretv.com>
 
 	* config/tc-arm.c (do_msr): Improve error message. 
